<resources>
    <string name="app_name">Spotify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="log_in_without_password">Log in without password</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="select_gender">Select Gender</string>
    <string name="create">Create</string>
    <string name="email_login_text">We\'ll send you an email with link where you update password</string>
    <string name="get_link">Get link</string>
    <string name="to_get_you_started">To get You started</string>
    <string name="recently_played">Recently Played</string>
    <string name="recommended_for_today">Recommended for today</string>
    <string name="suggested_artists">Suggested Artists</string>
    <string name="lyrics_preview">Lyrics preview</string>
    <string name="artist_songs">Artist,Songs</string>
    <string name="search_hint">Artists, songs, or podcasts</string>
    <string name="search">Search</string>
    <string name="browse_all">Browse all</string>
    <string name="your_library">Your Library</string>
    <string name="artists">Artists</string>
    <string name="playlist">Playlists</string>
    <string name="premium">Premium</string>
    <string name="home">Home</string>
    <string name="artist">Artist</string>
    <string name="all">All</string>
    <string name="playlist_item_text">Pritam, Amit Mishra Sonu Nigham, Shilpa Rao, A.R.Rahman, Momina Mustehsan</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="share">Share</string>
    <string name="like"> Add to Liked Song</string>
    <string name="add_song_to_albums">Add song to Albums</string>
    <string name="update">Update</string>
    <string name="spotify_badge">Spotify</string>
    <string name="this_is_the">This is the</string>
    <string name="dark_theme">Dark theme</string>
    <string name="orignal_sound_track_jsadhjashdh">Orignal Sound Track jsadhjashdh</string>
    <string name="various_artists">Various Artists</string>
    <string name="shukran_allah">Shukran Allah</string>
    <string name="various_artistsjfdjhdhfdjhfjdfhjdhfjdjfhjdhfjdhfjdfhdjhfjdhffhj">Various Artistsjfdjhdhfdjhfjdfhjdhfjdjfhjdhfjdhfjdfhdjhfjdhffhj</string>
    <string name="south_asian_sufi">South Asian Sufi</string>
    <string name="atif_aslam">Atif Aslam</string>
    <string name="pritam_amit_mishra_sonu_nigham_shilpa_rao_a_r_rahman_momina_mustehsan">Pritam, Amit Mishra Sonu Nigham, Shilpa Rao, A.R.Rahman, Momina Mustehsan</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Undefined</item>
    </string-array>
</resources>