<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingPrefix">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.SignUpFragment"
        tools:ignore="ScrollViewSize">

        <LinearLayout
            android:id="@+id/su_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/arrow_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"

                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:src="@drawable/arrow_back" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/create_account"
                android:textSize="@dimen/default_text_size"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/su_spotify_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/spotify_icon_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/su_linear_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/su_user_name_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            app:hintEnabled="false"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/su_spotify_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/su_user_name"

                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/name"

                android:maxLines="1"
                android:padding="12dp"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:id="@+id/su_dg_linear"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/su_user_name_layout">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/su_user_dob_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"

                app:layout_constraintEnd_toEndOf="parent"


                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/su_user_name_layout">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/su_dob_name"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:clickable="true"
                    android:cursorVisible="false"


                    android:drawableEnd="@drawable/calendar"
                    android:focusable="false"
                    android:hint="@string/date_of_birth"

                    android:maxLines="1"
                    android:padding="12dp"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/su_gender_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"


                android:layout_weight="1"
                app:layout_constraintHeight_percent="1">

                <AutoCompleteTextView
                    android:id="@+id/su_gender"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none"
                    android:padding="12dp"
                    android:text="@string/select_gender"
                    android:textColor="@color/spotify_dark_gray"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/su_email_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/su_dg_linear">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/su_email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/email"

                android:maxLines="1"
                android:padding="12dp"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/su_user_password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:hintEnabled="false"
            app:errorIconDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/su_email_layout"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/su_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/password"

                android:maxLines="1"
                android:padding="12dp"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/su_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/spotify_green"
            android:text="@string/create"
            android:textColor="@color/spotify_black"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/su_user_password_layout" />


        <include
            android:id="@+id/su_progress_bar"
            layout="@layout/progress_bar"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/su_button"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/su_button"

            />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
