<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/surface"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/spacing_16"
        android:paddingBottom="@dimen/spacing_24"
        tools:context=".view.SearchFragment">

        <TextView
            android:id="@+id/search_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textColor="@color/on_surface"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="@dimen/spacing_16"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@color/surface_container"
            app:cardCornerRadius="28dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_txt">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="@dimen/spacing_16"
                android:paddingEnd="@dimen/spacing_16">

                <ImageView
                    android:layout_width="@dimen/control_icon"
                    android:layout_height="@dimen/control_icon"
                    android:src="@drawable/ic_search"
                    app:tint="@color/on_surface_variant" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_12"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/search_hint"
                    android:textColor="@color/on_surface_variant"
                    android:textSize="15sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/search_brows_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_24"
            android:text="@string/browse_all"
            android:textColor="@color/on_surface"
            android:textSize="@dimen/section_title_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_bar" />

        <GridView
            android:id="@+id/search_category_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_16"
            android:gravity="center"
            android:horizontalSpacing="@dimen/spacing_8"
            android:numColumns="2"
            android:stretchMode="columnWidth"
            android:verticalSpacing="@dimen/spacing_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_brows_txt"
            tools:ignore="NestedScrolling"
            tools:listitem="@layout/category_grid_item_card" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
