<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/spotify_background_black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_height="wrap_content">

        <GridView

            android:id="@+id/hm_recent_play_grid"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:horizontalSpacing="8dp"
            android:verticalSpacing="8dp"
            android:stretchMode="columnWidth"
            android:gravity="center"
            android:numColumns="2"
            tools:listitem="@layout/recent_play_grid_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="NestedScrolling">

        </GridView>

        <TextView
            android:id="@+id/hm_get_started_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/to_get_you_started"
            android:textColor="@color/spotify_white"
            android:textSize="@dimen/heading_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hm_recent_play_grid" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hm_get_started_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"

            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hm_get_started_txt"
            tools:listitem="@layout/card_with_cornered_image_description" />
        <TextView
            android:id="@+id/hm_recently_played_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/recently_played"
            android:textColor="@color/spotify_white"
            android:textSize="@dimen/heading_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hm_get_started_recyclerview" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hm_recent_played_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"

            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hm_recently_played_txt"
            tools:listitem="@layout/recent_play_card" />


        <TextView
            android:id="@+id/hm_recommended_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/recommended_for_today"
            android:textColor="@color/spotify_white"
            android:textSize="@dimen/heading_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hm_recent_played_recyclerview" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hm_recommended_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"

            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hm_recommended_txt"
            tools:listitem="@layout/playlist_with_title_description_card" />
        <TextView
            android:id="@+id/hm_artists_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/suggested_artists"
            android:textColor="@color/spotify_white"
            android:textSize="@dimen/heading_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hm_recommended_recyclerview" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hm_artist_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="20dp"

            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hm_artists_txt"
            tools:listitem="@layout/artist_card" />
        <include
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            layout="@layout/loading_screen"
            android:id="@+id/loading_screen"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

           />






    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


